--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
